--- a/forms.html
+++ b/forms.html
@@ -13,6 +13,9 @@
 
     <label>Total</label>
     <input type="text" name="total"><br />
+
+    <label>Memo:</label>
+    <input type="text" name="memo"><br />
     <input type="submit">
 </form>
 {{end}}
