--- a/forms.html
+++ b/forms.html
@@ -9,9 +9,9 @@
     <li>{{.Time}} {{.Value}} {{.Memo}}</li>
     {{end}}
 </ul>
-<h3>Sum for {{.Name}} is ${{.Sum}}</h3>
-{{end}}
 
+{{end}}
+<h3>Sum for Nate is ${{.Sum}}</h3>
 {{else}}
 <h1>Split</h1>
 <form method="POST">
