--- a/forms.html
+++ b/forms.html
@@ -1,4 +1,13 @@
 <!-- forms.html -->
+<head>
+<style>
+    table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+    }
+</style>
+</head>
+<body>
 {{if .Success}}
 <h1>Thanks for your message!</h1>
 {{else if .Report}}
@@ -17,7 +26,7 @@
         <td>{{.Memo}}</td>
     </tr>
     {{end}}
-</table>>
+</table>
 <h3>Sum for {{.Name}} is ${{.Sum}}</h3>
 {{end}}
 {{else}}
@@ -38,3 +47,4 @@
     <input type="submit">
 </form>
 {{end}}
+</body>
