--- a/forms.html
+++ b/forms.html
@@ -10,6 +10,7 @@
 <body>
 {{if .Success}}
 <h1>Thanks for your message!</h1>
+<a href="http://blz.ai/split/report">Report</a>
 {{else if .Report}}
 {{range .Response.Reports}}
 <h1>{{.Name}}</h1>
