--- a/forms.html
+++ b/forms.html
@@ -6,8 +6,16 @@
         border-collapse: collapse;
     }
 </style>
+    <title>Bootstrap 4 Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
+<div class="container-fluid p-3 my-3 bg-dark text-white">
 {{if .Success}}
 <h1>Thanks for your message!</h1>
 <a href="http://blz.ai/split/report">Report</a>
@@ -48,4 +56,5 @@
     <input type="submit">
 </form>
 {{end}}
+</div>
 </body>
