--- a/forms.html
+++ b/forms.html
@@ -1,11 +1,5 @@
 <!-- forms.html -->
 <head>
-<style>
-    table, th, td {
-        border: 1px solid black;
-        border-collapse: collapse;
-    }
-</style>
     <title>Bootstrap 4 Example</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,13 +10,10 @@
 </head>
 <body>
 <div class="container-fluid p-3 my-3 bg-dark text-white">
-{{if .Success}}
-<h1>Thanks for your message!</h1>
-<a href="http://blz.ai/split/report">Report</a>
-{{else if .Report}}
+{{if .Report}}
 {{range .Response.Reports}}
 <h1>{{.Name}}</h1>
-<table style="width:50%">
+<table class="table table-dark table-hover">
     <tr>
         <th>Time</th>
         <th>Value</th>
@@ -55,6 +46,18 @@
     <input type="text" name="memo"><br />
     <input type="submit">
 </form>
+    {{if .Success}}
+    <div class="alert alert-success alert-dismissible">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>Transaction Added!</strong> <a href="http://blz.ai/split/report" class="alert-link">View Report</a>
+    </div>
+    {{end}
+    {{if .Error}}
+    <div class="alert alert-danger alert-dismissible">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>Error!</strong>
+    </div>
+    {{end}}
 {{end}}
 </div>
 </body>
