--- a/forms.html
+++ b/forms.html
@@ -51,7 +51,7 @@
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <strong>Transaction Added!</strong> <a href="http://blz.ai/split/report" class="alert-link">View Report</a>
     </div>
-    {{end}
+    {{end}}
     {{if .Error}}
     <div class="alert alert-danger alert-dismissible">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
