--- a/forms.html
+++ b/forms.html
@@ -1,6 +1,6 @@
 <!-- forms.html -->
 <head>
-    <title>Bootstrap 4 Example</title>
+    <title>Cost Splitter</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -37,7 +37,6 @@
 <h1>Split</h1>
     <form method="POST">
         <div class="form-group">
-        div class="form-group">
         <label for="natevalue">Nate:</label>
         <input type="text" class="form-control" id="natevalue">
 </div>
