--- a/forms.html
+++ b/forms.html
@@ -26,6 +26,7 @@
         <td>{{.Time}}</td>
         <td>{{.Value}}</td>
         <td>{{.Memo}}</td>
+        <td>{{.Category}}</td>
     </tr>
     {{end}}
 </table>
